//版本
syntax = "proto3";
//生成的外部类名，同时也是文件名
option optimize_for = SPEED;//加快解析
option java_package = "com.dpp.netty.protobuf";//指定生成到哪个包下
option java_outer_classname = "MyDataInfo";//外部类名称
//protobuf使用message管理数据
//protobuf可以使用message管理其他的message
message MyMessage{
    //定义一个枚举类型
    enum DateType{
        StudentType = 0;//在proto3中，要求enum的编号从0开始
        WorkerType = 1;
    }
    //用date_type标识传的是哪一个枚举类型
    DateType date_type = 1;
    //oneof表示每次枚举类型最多只能出现其中的一个，节省空间
    oneof dateBody{
        Student student = 2;
        Worker worker = 3;
    }
}

message Student{ //会在StudentPOJO外部类生成一个内部类Student，它是真正发送的POJO对象
    int32 id = 1;//Student类中，有一个属性：名字是id，类型是int32（对应java的int）。1表示属性序号，不是值
    string name = 2;
}
message Worker {
    string name = 1;
    int32 age = 2;
}